BridgeCareApp/AppliedResearchAssociates.CalculateEvaluate/grammar/code/CalculateEvaluateParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CalculateEvaluateParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AppliedResearchAssociates.CalculateEvaluate {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class CalculateEvaluateParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WHITESPACE=1, AND=2, OR=3, LEFT_PAREN=4, RIGHT_PAREN=5, TIMES=6, DIVIDED_BY=7, 
		PLUS=8, MINUS=9, EQUAL=10, NOT_EQUAL=11, LESS_THAN=12, LESS_THAN_OR_EQUAL=13, 
		GREATER_THAN_OR_EQUAL=14, GREATER_THAN=15, COMMA=16, LEFT_BRACKET=17, 
		RIGHT_BRACKET=18, IDENTIFIER=19, NUMBER=20, LITERAL_OPENING_DELIMITER_1=21, 
		LITERAL_OPENING_DELIMITER_2=22, LITERAL_CLOSING_DELIMITER_1=23, LITERAL_CONTENT_1=24, 
		LITERAL_CLOSING_DELIMITER_2=25, LITERAL_CONTENT_2=26;
	public const int
		RULE_root = 0, RULE_calculation = 1, RULE_arguments = 2, RULE_evaluation = 3, 
		RULE_comparisonOperand = 4, RULE_parameterReference = 5, RULE_literal = 6;
	public static readonly string[] ruleNames = {
		"root", "calculation", "arguments", "evaluation", "comparisonOperand", 
		"parameterReference", "literal"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'('", "')'", "'*'", "'/'", "'+'", "'-'", "'='", 
		"'<>'", "'<'", "'<='", "'>='", "'>'", "','", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WHITESPACE", "AND", "OR", "LEFT_PAREN", "RIGHT_PAREN", "TIMES", 
		"DIVIDED_BY", "PLUS", "MINUS", "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_THAN_OR_EQUAL", 
		"GREATER_THAN_OR_EQUAL", "GREATER_THAN", "COMMA", "LEFT_BRACKET", "RIGHT_BRACKET", 
		"IDENTIFIER", "NUMBER", "LITERAL_OPENING_DELIMITER_1", "LITERAL_OPENING_DELIMITER_2", 
		"LITERAL_CLOSING_DELIMITER_1", "LITERAL_CONTENT_1", "LITERAL_CLOSING_DELIMITER_2", 
		"LITERAL_CONTENT_2"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CalculateEvaluateParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CalculateEvaluateParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CalculateEvaluateParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CalculateEvaluateParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
	 
		public RootContext() { }
		public virtual void CopyFrom(RootContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CalculationRootContext : RootContext {
		public CalculationContext calculation() {
			return GetRuleContext<CalculationContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(CalculateEvaluateParser.Eof, 0); }
		public CalculationRootContext(RootContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterCalculationRoot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitCalculationRoot(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCalculationRoot(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EvaluationRootContext : RootContext {
		public EvaluationContext evaluation() {
			return GetRuleContext<EvaluationContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(CalculateEvaluateParser.Eof, 0); }
		public EvaluationRootContext(RootContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterEvaluationRoot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitEvaluationRoot(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEvaluationRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		try {
			State = 20;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				_localctx = new CalculationRootContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 14; calculation(0);
				State = 15; Match(Eof);
				}
				break;
			case 2:
				_localctx = new EvaluationRootContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 17; evaluation(0);
				State = 18; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CalculationContext : ParserRuleContext {
		public CalculationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_calculation; } }
	 
		public CalculationContext() { }
		public virtual void CopyFrom(CalculationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class InvocationContext : CalculationContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CalculateEvaluateParser.IDENTIFIER, 0); }
		public ITerminalNode LEFT_PAREN() { return GetToken(CalculateEvaluateParser.LEFT_PAREN, 0); }
		public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public ITerminalNode RIGHT_PAREN() { return GetToken(CalculateEvaluateParser.RIGHT_PAREN, 0); }
		public InvocationContext(CalculationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterInvocation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitInvocation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInvocation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NegationContext : CalculationContext {
		public ITerminalNode MINUS() { return GetToken(CalculateEvaluateParser.MINUS, 0); }
		public CalculationContext calculation() {
			return GetRuleContext<CalculationContext>(0);
		}
		public NegationContext(CalculationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterNegation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitNegation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNegation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultiplicationOrDivisionContext : CalculationContext {
		public CalculationContext left;
		public IToken operation;
		public CalculationContext right;
		public CalculationContext[] calculation() {
			return GetRuleContexts<CalculationContext>();
		}
		public CalculationContext calculation(int i) {
			return GetRuleContext<CalculationContext>(i);
		}
		public ITerminalNode TIMES() { return GetToken(CalculateEvaluateParser.TIMES, 0); }
		public ITerminalNode DIVIDED_BY() { return GetToken(CalculateEvaluateParser.DIVIDED_BY, 0); }
		public MultiplicationOrDivisionContext(CalculationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterMultiplicationOrDivision(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitMultiplicationOrDivision(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplicationOrDivision(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AdditionOrSubtractionContext : CalculationContext {
		public CalculationContext left;
		public IToken operation;
		public CalculationContext right;
		public CalculationContext[] calculation() {
			return GetRuleContexts<CalculationContext>();
		}
		public CalculationContext calculation(int i) {
			return GetRuleContext<CalculationContext>(i);
		}
		public ITerminalNode PLUS() { return GetToken(CalculateEvaluateParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(CalculateEvaluateParser.MINUS, 0); }
		public AdditionOrSubtractionContext(CalculationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterAdditionOrSubtraction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitAdditionOrSubtraction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdditionOrSubtraction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CalculationGroupingContext : CalculationContext {
		public ITerminalNode LEFT_PAREN() { return GetToken(CalculateEvaluateParser.LEFT_PAREN, 0); }
		public CalculationContext calculation() {
			return GetRuleContext<CalculationContext>(0);
		}
		public ITerminalNode RIGHT_PAREN() { return GetToken(CalculateEvaluateParser.RIGHT_PAREN, 0); }
		public CalculationGroupingContext(CalculationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterCalculationGrouping(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitCalculationGrouping(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCalculationGrouping(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumberReferenceContext : CalculationContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CalculateEvaluateParser.IDENTIFIER, 0); }
		public NumberReferenceContext(CalculationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterNumberReference(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitNumberReference(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberReference(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumberParameterReferenceContext : CalculationContext {
		public ITerminalNode LEFT_BRACKET() { return GetToken(CalculateEvaluateParser.LEFT_BRACKET, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(CalculateEvaluateParser.IDENTIFIER, 0); }
		public ITerminalNode RIGHT_BRACKET() { return GetToken(CalculateEvaluateParser.RIGHT_BRACKET, 0); }
		public NumberParameterReferenceContext(CalculationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterNumberParameterReference(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitNumberParameterReference(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberParameterReference(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumberLiteralContext : CalculationContext {
		public ITerminalNode NUMBER() { return GetToken(CalculateEvaluateParser.NUMBER, 0); }
		public NumberLiteralContext(CalculationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterNumberLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitNumberLiteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CalculationContext calculation() {
		return calculation(0);
	}

	private CalculationContext calculation(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		CalculationContext _localctx = new CalculationContext(Context, _parentState);
		CalculationContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_calculation, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				_localctx = new InvocationContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 23; Match(IDENTIFIER);
				State = 24; Match(LEFT_PAREN);
				State = 25; arguments();
				State = 26; Match(RIGHT_PAREN);
				}
				break;
			case 2:
				{
				_localctx = new NegationContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 28; Match(MINUS);
				State = 29; calculation(7);
				}
				break;
			case 3:
				{
				_localctx = new NumberLiteralContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 30; Match(NUMBER);
				}
				break;
			case 4:
				{
				_localctx = new NumberReferenceContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 31; Match(IDENTIFIER);
				}
				break;
			case 5:
				{
				_localctx = new NumberParameterReferenceContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 32; Match(LEFT_BRACKET);
				State = 33; Match(IDENTIFIER);
				State = 34; Match(RIGHT_BRACKET);
				}
				break;
			case 6:
				{
				_localctx = new CalculationGroupingContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 35; Match(LEFT_PAREN);
				State = 36; calculation(0);
				State = 37; Match(RIGHT_PAREN);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 49;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 47;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						_localctx = new MultiplicationOrDivisionContext(new CalculationContext(_parentctx, _parentState));
						((MultiplicationOrDivisionContext)_localctx).left = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_calculation);
						State = 41;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 42;
						((MultiplicationOrDivisionContext)_localctx).operation = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==TIMES || _la==DIVIDED_BY) ) {
							((MultiplicationOrDivisionContext)_localctx).operation = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 43; ((MultiplicationOrDivisionContext)_localctx).right = calculation(7);
						}
						break;
					case 2:
						{
						_localctx = new AdditionOrSubtractionContext(new CalculationContext(_parentctx, _parentState));
						((AdditionOrSubtractionContext)_localctx).left = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_calculation);
						State = 44;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 45;
						((AdditionOrSubtractionContext)_localctx).operation = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((AdditionOrSubtractionContext)_localctx).operation = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 46; ((AdditionOrSubtractionContext)_localctx).right = calculation(6);
						}
						break;
					}
					} 
				}
				State = 51;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ArgumentsContext : ParserRuleContext {
		public CalculationContext[] calculation() {
			return GetRuleContexts<CalculationContext>();
		}
		public CalculationContext calculation(int i) {
			return GetRuleContext<CalculationContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(CalculateEvaluateParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(CalculateEvaluateParser.COMMA, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arguments; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterArguments(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitArguments(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArguments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentsContext arguments() {
		ArgumentsContext _localctx = new ArgumentsContext(Context, State);
		EnterRule(_localctx, 4, RULE_arguments);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; calculation(0);
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 53; Match(COMMA);
				State = 54; calculation(0);
				}
				}
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EvaluationContext : ParserRuleContext {
		public EvaluationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_evaluation; } }
	 
		public EvaluationContext() { }
		public virtual void CopyFrom(EvaluationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EqualContext : EvaluationContext {
		public ComparisonOperandContext left;
		public IToken operation;
		public ComparisonOperandContext right;
		public ComparisonOperandContext[] comparisonOperand() {
			return GetRuleContexts<ComparisonOperandContext>();
		}
		public ComparisonOperandContext comparisonOperand(int i) {
			return GetRuleContext<ComparisonOperandContext>(i);
		}
		public ITerminalNode EQUAL() { return GetToken(CalculateEvaluateParser.EQUAL, 0); }
		public EqualContext(EvaluationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterEqual(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitEqual(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqual(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalConjunctionContext : EvaluationContext {
		public EvaluationContext left;
		public EvaluationContext right;
		public ITerminalNode AND() { return GetToken(CalculateEvaluateParser.AND, 0); }
		public EvaluationContext[] evaluation() {
			return GetRuleContexts<EvaluationContext>();
		}
		public EvaluationContext evaluation(int i) {
			return GetRuleContext<EvaluationContext>(i);
		}
		public LogicalConjunctionContext(EvaluationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterLogicalConjunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitLogicalConjunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalConjunction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LessThanContext : EvaluationContext {
		public ComparisonOperandContext left;
		public IToken operation;
		public ComparisonOperandContext right;
		public ComparisonOperandContext[] comparisonOperand() {
			return GetRuleContexts<ComparisonOperandContext>();
		}
		public ComparisonOperandContext comparisonOperand(int i) {
			return GetRuleContext<ComparisonOperandContext>(i);
		}
		public ITerminalNode LESS_THAN() { return GetToken(CalculateEvaluateParser.LESS_THAN, 0); }
		public LessThanContext(EvaluationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterLessThan(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitLessThan(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLessThan(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LessThanOrEqualContext : EvaluationContext {
		public ComparisonOperandContext left;
		public IToken operation;
		public ComparisonOperandContext right;
		public ComparisonOperandContext[] comparisonOperand() {
			return GetRuleContexts<ComparisonOperandContext>();
		}
		public ComparisonOperandContext comparisonOperand(int i) {
			return GetRuleContext<ComparisonOperandContext>(i);
		}
		public ITerminalNode LESS_THAN_OR_EQUAL() { return GetToken(CalculateEvaluateParser.LESS_THAN_OR_EQUAL, 0); }
		public LessThanOrEqualContext(EvaluationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterLessThanOrEqual(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.ExitLessThanOrEqual(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalculateEvaluateParserVisitor<TResult> typedVisitor = visitor as ICalculateEvaluateParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLessThanOrEqual(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EvaluationGroupingContext : EvaluationContext {
		public ITerminalNode LEFT_PAREN() { return GetToken(CalculateEvaluateParser.LEFT_PAREN, 0); }
		public EvaluationContext evaluation() {
			return GetRuleContext<EvaluationContext>(0);
		}
		public ITerminalNode RIGHT_PAREN() { return GetToken(CalculateEvaluateParser.RIGHT_PAREN, 0); }
		public EvaluationGroupingContext(EvaluationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICalculateEvaluateParserListener typedListener = listener as ICalculateEvaluateParserListener;
			if (typedListener != null) typedListener.EnterEvaluationGrouping(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
